Fix project topics compressed alignment

--- a/sass/project-topics.scss
+++ b/sass/project-topics.scss
@@ -117,7 +117,6 @@
   .project-topic__item {
     flex: 1 0 calc(50% - 30px);
     max-width: 50%;
-    margin-right: 20px;
     padding-bottom: 12px;
 
     &:nth-child(3n+2) {
